--- a/Springmvc-01/pom.xml
+++ b/Springmvc-01/pom.xml
@@ -67,7 +67,7 @@
 		    <artifactId>c3p0</artifactId>
 		    <version>0.9.1.1</version>
 		</dependency>
-  <!--引入jstl 、servlet-api、log4j 相关的jar包  -->
+  <!--引入jstl 、servlet-api、log4j、junit 相关的jar包  -->
   			<!-- https://mvnrepository.com/artifact/jstl/jstl -->
 		<dependency>
 		    <groupId>jstl</groupId>
@@ -87,6 +87,21 @@
 		    <artifactId>log4j</artifactId>
 		    <version>1.2.17</version>
 		</dependency>
-  
+		  <!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>4.12</version>
+		    <scope>test</scope>
+		</dependency>
+				<!-- https://mvnrepository.com/artifact/commons-httpclient/commons-httpclient -->
+		<dependency>
+		    <groupId>commons-httpclient</groupId>
+		    <artifactId>commons-httpclient</artifactId>
+		    <version>2.0.2</version>
+		</dependency>
+
+
+		
   </dependencies>
 </project>
