--- a/Springmvc-01/pom.xml
+++ b/Springmvc-01/pom.xml
@@ -67,7 +67,7 @@
 		    <artifactId>c3p0</artifactId>
 		    <version>0.9.1.1</version>
 		</dependency>
-  <!--引入jstl 、servlet-api、log4j、junit 相关的jar包  -->
+  <!--引入jstl 、servlet-api、log4j、junit、poi 相关的jar包  -->
   			<!-- https://mvnrepository.com/artifact/jstl/jstl -->
 		<dependency>
 		    <groupId>jstl</groupId>
@@ -100,7 +100,23 @@
 		    <artifactId>commons-httpclient</artifactId>
 		    <version>2.0.2</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi</artifactId>
+		    <version>3.11</version>
+		</dependency>
+		
+ 		<dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext-asian</artifactId>
+            <version>5.1.0</version>
+        </dependency>
+        <dependency>  
+           <groupId>com.lowagie</groupId>  
+           <artifactId>itext</artifactId>  
+           <version>2.1.7</version>  
+        </dependency>  
 
 		
   </dependencies>
